hard-gists/7003083/run.log
=== Docker Run Log for 7003083 ===
Started at: Mi 29. Okt 16:57:31 CET 2025

[2025-10-29 16:57:31] START: Running container for 7003083
[2025-10-29 16:57:32] SUCCESS: Container d522ded2d6129b6b3ba2f0af40c5763adc73e520117effb367c2b833beb0b10a started for 7003083
=== Container logs for 7003083 ===
  File "/snippet.py", line 65
    print r, alpha, a, b
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7003083 ===
[2025-10-29 16:57:34] INFO: Container d522ded2d6129b6b3ba2f0af40c5763adc73e520117effb367c2b833beb0b10a has stopped
